# zhou-haitao.github.io

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  VERSION  format.sh  index.html  pyproject.toml  readme.md  requirements-lint.txt  setup.py
ucm/csrc/esaretrieval/: CMakeLists.txt  retrieval_backend.cpp
ucm/csrc/gsaoffloadops/: CMakeLists.txt  setup.py
ucm/csrc/gsaoffloadops/include/: cal_kpre_and_topk.h  k_repre.h  select_topk_block.h  thread_safe_queue.h  vec_product.h
ucm/csrc/gsaoffloadops/src/: cal_kpre_and_topk.cpp  k_repre.cpp  pybinds.cpp  select_topk_block.cpp  thread_safe_queue.cpp  vec_product.cpp
ucm/csrc/ucmnfsstore/: .clang-format  CMakeLists.txt
ucm/csrc/ucmnfsstore/cc/api/ucmnfsstore/: ucmnfsstore.cc
ucm/csrc/ucmnfsstore/cc/domain/device/: aclrt_device.h  cuda_device.cc  cuda_device.h  ibuffered_device.cc  simu_device.cc  simu_device.h
ucm/csrc/ucmnfsstore/cc/domain/space/: space_layout.cc  space_manager.cc
ucm/csrc/ucmnfsstore/cc/domain/tsf_task/: tsf_task.h  tsf_task_manager.cc  tsf_task_manager.h  tsf_task_queue.h  tsf_task_set.h
ucm/csrc/ucmnfsstore/cc/infra/file/: file.cc  file.h  ifile.h  posix_file.cc
ucm/csrc/ucmnfsstore/cc/infra/logger/: logger.h
ucm/csrc/ucmnfsstore/cc/infra/memory/: memory.h
ucm/csrc/ucmnfsstore/cc/infra/template/: singleton.h
ucm/csrc/ucmnfsstore/cc/infra/thread/: index_pool.h  thread_pool.h
ucm/csrc/ucmnfsstore/cmake/: ascend.cmake  flags.cmake  variable.cmake
ucm/csrc/ucmnfsstore/test/case/: posix_file_test.cc  tsf_task_waiter_test.cc
ucm/csrc/ucmnfsstore/test/case/cmn/: path_base.h  random.h
ucm/csrc/ucmnfsstore/test/e2e/cuda/: embed.py  fetch.py
ucm/store/: .clang-format  CMakeLists.txt  __init__.py  base.py  factory.py  ucm_dram.py  ucm_mooncake.py  ucm_nfs_store.py  ucmstore.py
ucm/store/connector/: dramstore_connector.py  factory.py  mooncake_connector.py  nfsstore_connector.py  ucmstore.h
ucm/store/device/: CMakeLists.txt  ibuffered_device.h  idevice.h
ucm/store/device/ascend/: CMakeLists.txt  ascend_device.cc
ucm/store/device/cuda/: CMakeLists.txt  cuda_device.cc
ucm/store/device/simu/: CMakeLists.txt  simu_device.cc
ucm/store/dramstore/: CMakeLists.txt  dramstore_connector.py
ucm/store/dramstore/cc/api/: dramstore.cc  dramstore.h
ucm/store/dramstore/cpy/: dramstore.py.cc
ucm/store/infra/: CMakeLists.txt
ucm/store/infra/file/: file.cc  file.h  ifile.h  posix_file.cc  posix_file.h
ucm/store/infra/logger/: logger.h
ucm/store/infra/logger/flux/: flux_logger.cc
ucm/store/infra/logger/spdlog/: spdlog_logger.cc
ucm/store/infra/status/: status.h
ucm/store/infra/template/: hashset.h
ucm/store/infra/thread/: index_pool.h  latch.h  thread_pool.h
ucm/store/infra/time/: stopwatch.h
ucm/store/localstore/: CMakeLists.txt
ucm/store/localstore/cc/api/: localstore.cc  localstore.h
ucm/store/localstore/cc/domain/cache/: cache_data.cc  cache_data.h  cache_hash.cc  cache_hash.h  cache_index.cc  cache_index.h  cache_instance.cc  cache_instance.h  cache_layout.cc  cache_layout.h  cache_meta.cc  cache_meta.h  cache_segment.cc  cache_segment.h
ucm/store/localstore/cpy/: localstore.py.cc
ucm/store/mooncakestore/: mooncake_connector.py
ucm/store/nfsstore/: CMakeLists.txt  nfsstore_connector.py
ucm/store/nfsstore/cc/api/: nfsstore.cc  nfsstore.h
ucm/store/nfsstore/cc/domain/space/: space_layout.cc  space_layout.h  space_manager.cc  space_manager.h
ucm/store/nfsstore/cc/domain/tsf_task/: tsf_task.h  tsf_task_manager.cc  tsf_task_manager.h  tsf_task_queue.cc  tsf_task_queue.h  tsf_task_set.h  tsf_task_waiter.h
ucm/store/nfsstore/cpy/: nfsstore.py.cc
ucm/store/test/: CMakeLists.txt
ucm/store/test/case/cmn/: path_base.h  random.h
ucm/store/test/case/infra/: hashset_test.cc  posix_file_test.cc
ucm/store/test/case/localstore/: cache_hash_test.cc  cache_index_test.cc  cache_instance_test.cc  cache_layout_test.cc  cache_segment_test.cc
ucm/store/test/case/nfsstore/: tsf_task_waiter_test.cc
ucm/store/test/e2e/: nfsstore_embed.py  nfsstore_fetch.py
ucm/ucm_sparse/kvstar/async_retrieve_lib/csrc/: CMakeLists.txt
ucm/ucm_sparse/kvstar/async_retrieve_lib/csrc/core/: CMakeLists.txt
ucm/ucm_sparse/kvstar/async_retrieve_lib/csrc/core/api/kvstar_retrieve/: kvstar_retrieve.cpp  kvstar_retrieve.h
ucm/ucm_sparse/kvstar/async_retrieve_lib/csrc/core/domain/retrieve_task/: computation_task.h  (+13 more)
ucm/ucm_sparse/kvstar/async_retrieve_lib/csrc/py_intf/: CMakeLists.txt  py_intf.cpp
unifiedcache/csrc/ucmnfsstore/: CMakeLists.txt
unifiedcache/csrc/ucmnfsstore/cc/: CMakeLists.txt
unifiedcache/csrc/ucmnfsstore/cc/api/ucmnfsstore/: ucmnfsstore.cc  ucmnfsstore.h
unifiedcache/csrc/ucmnfsstore/cc/domain/device/: aclrt_device.cc  aclrt_device.h  cuda_device.cc  cuda_device.h  device.cc  device.h  ibuffered_device.cc  ibuffered_device.h  idevice.h  simu_device.cc  simu_device.h
unifiedcache/csrc/ucmnfsstore/cc/domain/space/: space_layout.cc  space_layout.h  space_manager.cc  space_manager.h
unifiedcache/csrc/ucmnfsstore/cc/domain/tsf_task/: configurator.h  tsf_task.h  tsf_task_manager.cc  tsf_task_manager.h  tsf_task_queue.cc  tsf_task_queue.h  tsf_task_runner.cc  tsf_task_runner.h  tsf_task_set.cc  tsf_task_set.h  tsf_task_waiter.h
unifiedcache/csrc/ucmnfsstore/cc/infra/file/: file.cc  file.h  ifile.h  posix_file.cc  posix_file.h
unifiedcache/csrc/ucmnfsstore/cc/infra/logger/: logger.cc
unifiedcache/csrc/ucmnfsstore/cc/infra/memory/: memory.cc  memory.h
unifiedcache/csrc/ucmnfsstore/cc/infra/status/: status.h
unifiedcache/csrc/ucmnfsstore/cc/infra/template/: singleton.h
unifiedcache/csrc/ucmnfsstore/cc/infra/thread/: latch.h
unifiedcache/csrc/ucmnfsstore/cmake/: cuda.cmake  flags.cmake
unifiedcache/csrc/ucmnfsstore/cpy/: CMakeLists.txt  ucmnfsstore.py.cc
unifiedcache/csrc/ucmnfsstore/test/: CMakeLists.txt
unifiedcache/csrc/ucmnfsstore/test/case/: file_test.cc  posix_file_test.cc  space_manager_test.cc  tsf_task_waiter_test.cc
unifiedcache/csrc/ucmnfsstore/test/e2e/cuda/: embed.py  fetch.py
(+226 files in other folders)
