if(RUNTIME_ENVIRONMENT STREQUAL "ascend")
    add_subdirectory(ascend)
endif()
if(RUNTIME_ENVIRONMENT STREQUAL "cuda")
    add_subdirectory(cuda)
endif()
if(RUNTIME_ENVIRONMENT STREQUAL "simu")
    add_subdirectory(simu)
endif()
target_include_directories(storedevice PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
